build/log/idf_py_stdout_output_60733
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/pepe/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/pepe/tes1/build/config -I/home/pepe/tes1/main -I/home/pepe/esp/esp-idf/components/newlib/platform_include -I/home/pepe/esp/esp-idf/components/freertos/config/include -I/home/pepe/esp/esp-idf/components/freertos/config/include/freertos -I/home/pepe/esp/esp-idf/components/freertos/config/xtensa/include -I/home/pepe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/pepe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/pepe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/pepe/esp/esp-idf/components/freertos/esp_additions/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/include/soc -I/home/pepe/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/pepe/esp/esp-idf/components/esp_hw_support/dma/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/pepe/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/pepe/esp/esp-idf/components/heap/include -I/home/pepe/esp/esp-idf/components/log/include -I/home/pepe/esp/esp-idf/components/soc/include -I/home/pepe/esp/esp-idf/components/soc/esp32s3 -I/home/pepe/esp/esp-idf/components/soc/esp32s3/include -I/home/pepe/esp/esp-idf/components/hal/platform_port/include -I/home/pepe/esp/esp-idf/components/hal/esp32s3/include -I/home/pepe/esp/esp-idf/components/hal/include -I/home/pepe/esp/esp-idf/components/esp_rom/include -I/home/pepe/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/pepe/esp/esp-idf/components/esp_rom/esp32s3 -I/home/pepe/esp/esp-idf/components/esp_common/include -I/home/pepe/esp/esp-idf/components/esp_system/include -I/home/pepe/esp/esp-idf/components/esp_system/port/soc -I/home/pepe/esp/esp-idf/components/esp_system/port/include/private -I/home/pepe/esp/esp-idf/components/xtensa/esp32s3/include -I/home/pepe/esp/esp-idf/components/xtensa/include -I/home/pepe/esp/esp-idf/components/xtensa/deprecated_include -I/home/pepe/esp/esp-idf/components/lwip/include -I/home/pepe/esp/esp-idf/components/lwip/include/apps -I/home/pepe/esp/esp-idf/components/lwip/include/apps/sntp -I/home/pepe/esp/esp-idf/components/lwip/lwip/src/include -I/home/pepe/esp/esp-idf/components/lwip/port/include -I/home/pepe/esp/esp-idf/components/lwip/port/freertos/include -I/home/pepe/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/pepe/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/pepe/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/pepe/esp/esp-idf/components/esp_timer/include -I/home/pepe/esp/esp-idf/components/driver/deprecated -I/home/pepe/esp/esp-idf/components/driver/i2c/include -I/home/pepe/esp/esp-idf/components/driver/touch_sensor/include -I/home/pepe/esp/esp-idf/components/driver/twai/include -I/home/pepe/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/pepe/esp/esp-idf/components/esp_pm/include -I/home/pepe/esp/esp-idf/components/esp_ringbuf/include -I/home/pepe/esp/esp-idf/components/esp_driver_gpio/include -I/home/pepe/esp/esp-idf/components/esp_driver_pcnt/include -I/home/pepe/esp/esp-idf/components/esp_driver_gptimer/include -I/home/pepe/esp/esp-idf/components/esp_driver_spi/include -I/home/pepe/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/pepe/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/pepe/esp/esp-idf/components/esp_driver_i2s/include -I/home/pepe/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/pepe/esp/esp-idf/components/sdmmc/include -I/home/pepe/esp/esp-idf/components/esp_driver_sdspi/include -I/home/pepe/esp/esp-idf/components/esp_driver_sdio/include -I/home/pepe/esp/esp-idf/components/esp_driver_dac/include -I/home/pepe/esp/esp-idf/components/esp_driver_rmt/include -I/home/pepe/esp/esp-idf/components/esp_driver_tsens/include -I/home/pepe/esp/esp-idf/components/esp_driver_sdm/include -I/home/pepe/esp/esp-idf/components/esp_driver_i2c/include -I/home/pepe/esp/esp-idf/components/esp_driver_uart/include -I/home/pepe/esp/esp-idf/components/vfs/include -I/home/pepe/esp/esp-idf/components/esp_driver_ledc/include -I/home/pepe/esp/esp-idf/components/esp_driver_parlio/include -I/home/pepe/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/pepe/tes1=. -fmacro-prefix-map=/home/pepe/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/pepe/tes1/main/main.c
/home/pepe/tes1/main/main.c: In function 'app_main':
/home/pepe/tes1/main/main.c:17:21: warning: passing argument 1 of 'esp_task_wdt_init' makes pointer from integer without a cast [-Wint-conversion]
   17 | #define WDT_TIMEOUT 5
      |                     ^
      |                     |
      |                     int
/home/pepe/tes1/main/main.c:45:23: note: in expansion of macro 'WDT_TIMEOUT'
   45 |     esp_task_wdt_init(WDT_TIMEOUT, true);
      |                       ^~~~~~~~~~~
In file included from /home/pepe/tes1/main/main.c:9:
/home/pepe/esp/esp-idf/components/esp_system/include/esp_task_wdt.h:47:58: note: expected 'const esp_task_wdt_config_t *' but argument is of type 'int'
   47 | esp_err_t esp_task_wdt_init(const esp_task_wdt_config_t *config);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
/home/pepe/tes1/main/main.c:45:5: error: too many arguments to function 'esp_task_wdt_init'
   45 |     esp_task_wdt_init(WDT_TIMEOUT, true);
      |     ^~~~~~~~~~~~~~~~~
/home/pepe/esp/esp-idf/components/esp_system/include/esp_task_wdt.h:47:11: note: declared here
   47 | esp_err_t esp_task_wdt_init(const esp_task_wdt_config_t *config);
      |           ^~~~~~~~~~~~~~~~~
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/pepe/tes1/build/bootloader/esp-idf/esptool_py && /home/pepe/.espressif/python_env/idf5.3_py3.10_env/bin/python /home/pepe/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/pepe/tes1/build/bootloader/bootloader.bin
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
ninja: build stopped: subcommand failed.
